# docwise-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .temp_test_run_data.json
.github/workflows/: backend.yml
app/: config.py  main.py
app/api/routes/: chat.py  documents.py  health.py  internal.py
app/core/: embeddings.py  ingestion.py  llm.py  rate_limit.py  retrieval.py
app/db/: database.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6c2a5561e639_create_sessions_and_chunks_tables.py  b3f7a9d21c40_embedding_column_to_768_dims.py  e8d1c4a97f22_create_daily_usage_table.py
app/schemas/: document.py  internal.py
app/services/: chat_service.py  cleanup_service.py  document_service.py  usage_service.py
evals/: run_evals.py
evals/golden/: dataset.json
scripts/: smoke_chat_service.py  smoke_ingestion.py  smoke_llm.py
tests/: conftest.py  test_chat.py  test_cleanup.py  test_config.py  test_documents.py  test_security.py  test_stats.py
